# embsh

./: .clang-format  CHANGELOG.md  CMakeLists.txt  CPPLINT.cfg  README.md  README_zh.md
.github/workflows/: ci.yml  coverage.yml
docs/: design_zh.md
examples/: CMakeLists.txt  basic_demo.cpp  console_demo.cpp  multi_backend.cpp
include/embsh/: command_registry.hpp  console_shell.hpp  line_editor.hpp  platform.hpp  telnet_server.hpp  types.hpp  uart_shell.hpp
tests/: CMakeLists.txt  test_command_registry.cpp  test_console_shell.cpp  test_line_editor.cpp  test_telnet_server.cpp  test_uart_shell.cpp
